#29 - Fixing 2023 blog article template, using iframe now

--- a/src/web/iframes/2023/08/studio-roundup-august-2023.pug
+++ b/src/web/iframes/2023/08/studio-roundup-august-2023.pug
@@ -5,7 +5,7 @@ title: Studio Roundup for August 2023 | Open Studios | Perth, Western Australia
 eleventyExcludeFromCollections: true
 ---
 
-extends ../../../../templates/1999_html.pug
+extends ../../../../templates/1999_iframe.pug
 
 block append page
   h2 August 2023
