--- a/src/templates/blog_post_iframe.pug
+++ b/src/templates/blog_post_iframe.pug
@@ -24,7 +24,7 @@ block append page
 
   .content.blog_post
     .breadcrumb
-      a.item(href='/blog.html') Blogs
+      span.item Blogs
       span.item &nbsp;&nbsp;>&nbsp;&nbsp;
       span.item= blogpost.title
     h2= blogpost.title
@@ -32,4 +32,4 @@ block append page
         !{ blogpost.content }
     br
     br
-    a(href='/blog.html') Back to Blog Home
+
