--- a/src/web/iframes/2023/09/studio-roundup-september-2023.pug
+++ b/src/web/iframes/2023/09/studio-roundup-september-2023.pug
@@ -5,7 +5,7 @@ title: Studio Roundup for September 2023 | Open Studios | Perth, Western Austral
 eleventyExcludeFromCollections: true
 ---
 
-extends ../../../../templates/1999_html.pug
+extends ../../../../templates/1999_iframe.pug
 
 block append page
   h2 September 2023
