--- a/src/web/iframes/2023/10/studio-roundup-october-2023.pug
+++ b/src/web/iframes/2023/10/studio-roundup-october-2023.pug
@@ -5,7 +5,7 @@ title: Studio Roundup for October 2023 | Open Studios | Perth, Western Australia
 eleventyExcludeFromCollections: true
 ---
 
-extends ../../../../templates/1999_html.pug
+extends ../../../../templates/1999_iframe.pug
 
 block append page
   h2 October 2023
