--- a/src/content/home.pug
+++ b/src/content/home.pug
@@ -12,6 +12,12 @@ h2 Welcome!
         a(href='/case_studies.html' style='float: right') See case study
     .column
       h3(style='margin-top: 0') Recent updates
+      a(href='/blog/2024/09/how-to-implement-blender-principled-bsdf-materials-in-three-js-webgl.html' target='_blank' title='How to implement Blender Principled BSDF Materials in Three.js (WebGL)')
+        img(src='/assets/blog/2024/09/Screenshot-2024-06-28-162051-Medium.png' style='width: 100%; height: auto; min-height: 269px; object-fit: cover;' alt='A screenshot from the Langenium blog article')
+      a(href='/blog/2024/09/how-to-implement-blender-principled-bsdf-materials-in-three-js-webgl.html')
+        h3 How to implement Blender Principled BSDF Materials in Three.js (WebGL)
+      p.
+        Constructive Solid Geometry. Procedural generation. Physically Based Materials. Shader Programming.
       a(href='/blog/2024/05/studio-roundup-may-2024.html' target='_blank' title='Studio Roundup for May 2024')
         img(src='/assets/blog/2024/05/opal-banner.webp' style='width: 100%; height: auto; min-height: 269px; object-fit: cover;' alt='A close up photo of the surface of an Opal')
       a(href='/blog/2024/05/studio-roundup-may-2024.html')
@@ -24,18 +30,6 @@ h2 Welcome!
         h3 Studio Roundup for April 2024
       p.
         One Of A Kind. Marketing Databases. Website Optimisation.
-      a(href='/blog/2024/03/studio-roundup-march-2024.html' target='_blank' title='Studio Roundup for March 2024')
-        img(src='/assets/blog/2024/03/1__M7aKKPzaeL1ubZgMFUeOg.webp' style=' width: 100%; height: auto;' alt='Can you tell which is the render and which is the original reference photo?')
-      a(href='/blog/2024/03/studio-roundup-march-2024.html')
-        h3 Studio Roundup for March 2024
-      p.
-        Realistic renders. DevOps tooling. Video ads.
-      a(href='/blog/2024/02/studio-roundup-february-2024.html' target='_blank' title='Studio Roundup for February 2024')
-        img(src='/assets/blog/2024/02/1_dyIbSVF7tlb9HYpBb4AkMQ.webp' style=' width: 100%; height: auto;' alt='18k white gold petals surrounding a blush pink spinel. Part of the Garrett Ray Blossoms collection.')
-      a(href='/blog/2024/02/studio-roundup-february-2024.html')
-        h3 Studio Roundup for February 2024
-      p.
-        Custom Analytics. Valentine's Day Gifts. Tech for Small business.
       a(href='/blog.html' style='float: right' title="View blog") Read our blog
   noscript
     .row    
