--- a/src/templates/2023.pug
+++ b/src/templates/2023.pug
@@ -2,7 +2,7 @@ doctype html
 html(lang='en')
     head
         meta(charset='utf-8')
-        meta(name='viewport' content='width=device-width, initial-scale=1')
+        meta(name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no')
         meta(name="description" content="We are Open Studios. Perth based digital production studio.")
 
         title Open Studios | Perth, Western Australia
