--- a/src/web/sitemap.pug
+++ b/src/web/sitemap.pug
@@ -12,7 +12,7 @@ urlset(xmlns="http://www.sitemaps.org/schemas/sitemap/0.9")
             url
                 - urlstring = 'https://openstudios.xyz' + page.url
                 loc= urlstring
-                lastmod= page.date.toISOString()
+                lastmod= page.date.toISOString().split('T')[0]
                 if page.data.changefreq || page.url == '/'
                     changefreq= page.data.changefreq
                 else
@@ -24,5 +24,5 @@ urlset(xmlns="http://www.sitemaps.org/schemas/sitemap/0.9")
         url
             - urlstring = 'https://openstudios.xyz/blog/' + post.year + '/' + post.month + '/' + post.slug + '.html'
             loc= urlstring
-            lastmod= post.modifiedDate
+            lastmod= post.modifiedDate.split('T')[0]
             changefreq daily
