#63 - Fixing 404 page and URLs when entering virtual environment

--- a/src/web/404.pug
+++ b/src/web/404.pug
@@ -5,7 +5,7 @@ eleventyExcludeFromCollections: true
 title: Page not found | Open Studios | Perth, Western Australia
 ---
 
-extends ../templates/1999_html.pug
+extends ../templates/404.pug
 
 block append page
   include ../content/404.pug
