--- a/src/templates/1999_html.pug
+++ b/src/templates/1999_html.pug
@@ -154,8 +154,7 @@ html(lang='en')
                     gl_FragColor = vec4(base_color.rgb + bloom_color.rgb, max(base_color.a, lum));
                 }
 
-            script
-                include ../scripts/scenograph.js
+            script(src='/assets/scripts/L.js')
             script
                 include ../scripts/pokematrix.js
             script.
