--- a/src/templates/1999_html.pug
+++ b/src/templates/1999_html.pug
@@ -154,6 +154,8 @@ html(lang='en')
                     gl_FragColor = vec4(base_color.rgb + bloom_color.rgb, max(base_color.a, lum));
                 }
 
+            script(type="importmap")
+                include importmap.json
             script(src='/assets/scripts/L.js')
             script
                 include ../scripts/pokematrix.js
