#59 - Replacing exit sign with back and go 3d

--- a/src/templates/1999_layout.pug
+++ b/src/templates/1999_layout.pug
@@ -26,7 +26,7 @@
             canvas#pokematrixCanvas
             canvas#pokematrixImage
             a#pokematrixSign
-                img(src='/assets/exit.svg' title='Return to the office' width='300' height='85' alt='Exit sign')
+                img(src='/assets/go3d.svg' title='Enter the virtual 3D office' width='300' height='85' alt='A sign saying to go 3D')
         include ../templates/exit_image.pug
         include ../templates/exit_image_mobile.pug
     if page.url == '/about_us.html'
