#74 Archiving 2024 blog posts

--- a/src/content/blog.pug
+++ b/src/content/blog.pug
@@ -2,90 +2,17 @@ h2 Blog
 .content
   .menu(role="navigation")
       ul(role="menu")
-          li(role="presentation") Current
+          li(role="presentation") Recent articles
+          li(role="presentation")
+              a(href='/blog/2024.html' role="menuitem") 2024
           li(role="presentation")
               a(href='/blog/2023.html' role="menuitem") 2023
   .row
-    .column(style="flex-basis: 55%")
-      a(href='/blog/2024/09/how-to-implement-blender-principled-bsdf-materials-in-three-js-webgl.html')
-        h3 How to implement Blender Principled BSDF Materials in Three.js (WebGL)
-      p.
-        Constructive Solid Geometry. Procedural generation. Physically Based Materials. Shader Programming.
-      p
-        | Delve into our 
-        a(href='/blog/2024/05/studio-roundup-may-2024.html') retrospective for Langenium
-        | !
-    .column(style="flex-basis: 35%; padding: 1.5rem 0;")
-      a(href='/blog/2024/09/how-to-implement-blender-principled-bsdf-materials-in-three-js-webgl.html' target='_blank' title='How to implement Blender Principled BSDF Materials in Three.js (WebGL)')
-        img(src='/assets/blog/2024/09/Screenshot-2024-06-28-162051-Medium.png' style='width: 100%; height: auto; min-height: 107px; object-fit: cover;' alt='A screenshot from the Langenium blog article')
-  .row
-    .column(style="flex-basis: 55%")
-      a(href='/blog/2024/05/studio-roundup-may-2024.html')
-        h3 Studio Roundup for May 2024
-      p.
-        Opals. Game Dev. Marketing.
-      p
-        | Read our 
-        a(href='/blog/2024/05/studio-roundup-may-2024.html') retrospective for May 2024
-        | !
-    .column(style="flex-basis: 35%; padding: 1.5rem 0;")
-      a(href='/blog/2024/05/studio-roundup-may-2024.html' target='_blank' title='Studio Roundup for May 2024')
-        img(src='/assets/blog/2024/05/opal-banner.webp' style='width: 100%; height: auto; min-height: 107px; object-fit: cover;' alt='A close up photo of the surface of an Opal')
-  .row
-    .column(style="flex-basis: 55%")
-      a(href='/blog/2024/04/studio-roundup-april-2024.html')
-        h3 Studio Roundup for April 2024
-      p.
-        One Of A Kind. Marketing Databases. Website Optimisation.
-      p
-        | Explore our 
-        a(href='/blog/2024/04/studio-roundup-april-2024.html') retrospective for April 2024
-        | !
-    .column(style="flex-basis: 35%; padding: 1.5rem 0;")
-      a(href='/blog/2024/04/studio-roundup-april-2024.html' target='_blank' title='Studio Roundup for April 2024')
-        img(src='/assets/blog/2024/04/emerald-pendant.jpg' style=' width: 100%; height: auto;' alt='A photo of necklace featuring an emerald pendant, set in 18k gold')
-  .row
-    .column(style="flex-basis: 55%")
-      a(href='/blog/2024/03/studio-roundup-march-2024.html')
-        h3 Studio Roundup for March 2024
-      p.
-        Realistic renders. DevOps tooling. Video ads.
-      p
-        | Check out our 
-        a(href='/blog/2024/03/studio-roundup-march-2024.html') retrospective for March 2024
-        | !
-    .column(style="flex-basis: 35%; padding: 1.5rem 0;")
-      a(href='/blog/2024/03/studio-roundup-march-2024.html' target='_blank' title='Studio Roundup for March 2024')
-        img(src='/assets/blog/2024/03/1__M7aKKPzaeL1ubZgMFUeOg.webp' style=' width: 100%; height: auto;' alt='Can you tell which is the render and which is the original reference photo?')
-  .row
-    .column(style="flex-basis: 55%")
-      a(href='/blog/2024/02/studio-roundup-february-2024.html')
-        h3 Studio Roundup for February 2024
-      p.
-        Custom Analytics. Valentine's Day Gifts. Tech for Small business.
-      p
-        | Enter our 
-        a(href='/blog/2024/02/studio-roundup-february-2024.html') retrospective for February 2024
-        | .
-    .column(style="flex-basis: 35%; padding: 1.5rem 0;")
-      a(href='/blog/2024/02/studio-roundup-february-2024.html' target='_blank' title='Studio Roundup for February 2024')
-        img(src='/assets/blog/2024/02/1_dyIbSVF7tlb9HYpBb4AkMQ.webp' style=' width: 100%; height: auto;' alt='18k white gold petals surrounding a blush pink spinel. Part of the Garrett Ray Blossoms collection.')
-  .row
-    .column(style="flex-basis: 55%")
-      a(href='/blog/2024/01/studio-roundup-january-2024.html')
-        h3 Studio Roundup for January 2024
-      p.
-        Find your treasure. MMORPG development updates. Knowledge sharing.
-      p
-        | Learn more in our 
-        a(href='/blog/2024/01/studio-roundup-january-2024.html') January 2024 retro
-        | .
-    .column(style="flex-basis: 35%; padding: 1.5rem 0;")
-      a(href='/blog/2024/01/studio-roundup-january-2024.html' target='_blank' title='Studio Roundup for January 2024')
-        img(src='/assets/blog/2024/01/1_jvdn9ENFN3e46Mf5GFmpcA.webp' style=' width: 100%; height: auto;' alt='Featuring a pair of baby blue Aquamarine in a tapered baguette and octagon cut for a unique and contrasting pairing. This handmade toi et moi ring is part of the Garrett Ray One of a Kind Collection.')
 
   .menu(role="navigation")
       ul(role="menu")
-          li(role="presentation") Current
+          li(role="presentation") Recent articles
+          li(role="presentation")
+              a(href='/blog/2024.html' role="menuitem") 2024
           li(role="presentation")
               a(href='/blog/2023.html' role="menuitem") 2023
