--- a/src/content/blog/2023.pug
+++ b/src/content/blog/2023.pug
@@ -3,8 +3,11 @@ h2 Blog
   .menu(role="navigation")
     ul(role="menu")
         li(role="presentation")
-            a(href='/blog.html' role="menuitem") Current
+            a(href='/blog.html' role="menuitem") Recent articles
+        li(role="presentation")
+              a(href='/blog/2024.html' role="menuitem") 2024
         li(role="presentation") 2023
+        
 
   .row
     .column(style="flex-basis: 55%")
@@ -190,5 +193,5 @@ h2 Blog
   .menu(role="navigation")
       ul(role="menu")
           li(role="presentation")
-              a(href='/blog.html' role="menuitem") Current
+              a(href='/blog.html' role="menuitem") Recent articles
           li(role="presentation") 2023
