#74 - Updating v6 blog post content to latest

--- a/src/content/blog.pug
+++ b/src/content/blog.pug
@@ -12,14 +12,14 @@ h2 Blog
       a(href='/blog/2025/05/langenium-v6-retrospective.html' target='_blank' title='Langenium v6 Retrospective')
         h3 Langenium v6 Retrospective
       p.
-        Implementing bot AI, minimaps, health bars and aircraft subsystems. The engine's new subsystems give players and bots combat abilities like targeting scanners, weapon consoles and more.
+        An overview of this major overhaul of our open source MMORPG project Langenium. This new version adds procedurally generatd scenery, NPC AI, minimaps and new aircraft subsystems.
       p
         | Check out the 
         a(href='/blog/2025/05/langenium-v6-retrospective.html' target='_blank' title='Langenium v6 Retrospective') Langenium v6 retrospective
         | !
     .column(style="flex-basis: 35%; padding: 1.5rem 0;")
       a(href='/blog/2025/05/langenium-v6-retrospective.html' target='_blank' title='Langenium v6 Retrospective')
-        img(src='/assets/blog/2024/09/Screenshot-2024-06-28-162051-Medium.png' style='width: 100%; height: auto; min-height: 107px; object-fit: cover;' alt='A screenshot from the Langenium blog article')
+        img(src='/assets/blog/2025/05/3d-logo-01-1024x576.png' style='width: 100%; height: auto; min-height: 107px; object-fit: cover;' alt='A screenshot from the Langenium blog article')
 
   .menu(role="navigation")
       ul(role="menu")
