--- a/src/templates/blog_post.pug
+++ b/src/templates/blog_post.pug
@@ -24,7 +24,7 @@ block append page
 
   .content.blog_post
     .breadcrumb
-      a.item(href='/blog.html') Blogs
+      a.item(href='/blog.html') Blog
       span.item &nbsp;&nbsp;>&nbsp;&nbsp;
       span.item= blogpost.title
     h2= blogpost.title
