--- a/src/templates/blog_post_iframe.pug
+++ b/src/templates/blog_post_iframe.pug
@@ -24,7 +24,7 @@ block append page
 
   .content.blog_post
     .breadcrumb
-      span.item Blogs
+      span.item Blog
       span.item &nbsp;&nbsp;>&nbsp;&nbsp;
       span.item= blogpost.title
     h2= blogpost.title
