--- a/src/styles/sections/wordpress_content.styl
+++ b/src/styles/sections/wordpress_content.styl
@@ -45,6 +45,16 @@
     width: auto;
 }
 
+/* Video Embeds */
+.wp-block-embed.is-type-video {
+    margin: 2rem auto 0;
+    max-width: 500px;
+
+    .wp-element-caption {
+        margin-top: 1rem;
+    }
+}
+
 /* Code Blocks */
 .wp-block-code {
     background: #0F0E22;
