--- a/src/styles/sections/wordpress_content.styl
+++ b/src/styles/sections/wordpress_content.styl
@@ -45,7 +45,7 @@
     width: auto;
 }
 
-/* Video Embeds */
+/* Video Embed Blocks */
 .wp-block-embed.is-type-video {
     margin: 2rem auto 0;
     max-width: 500px;
@@ -53,6 +53,15 @@
     .wp-element-caption {
         margin-top: 1rem;
     }
+}
+
+/* Media & Text Block */
+.wp-block-media-text {
+  display: grid;
+  grid-template-columns: 50% 1fr;
+  align-items: center;
+  gap: 1.5em;
+  margin-bottom: 1.5em;
 }
 
 /* Code Blocks */
