--- a/docs/assets/css/1999.css
+++ b/docs/assets/css/1999.css
@@ -745,6 +745,25 @@ a.icon_button img:hover {
   gap: 1.5em;
   margin-bottom: 1.5em;
 }
+.wp-block-media-text.has-media-on-the-right {
+  grid-template-columns: 1fr 50%;
+}
+.wp-block-media-text .wp-block-media-text__media {
+  margin: 0;
+}
+.wp-block-media-text .wp-block-media-text__content {
+  padding: 0 1em;
+}
+@media (max-width: 768px) {
+  .wp-block-media-text {
+    display: block;
+  }
+  .wp-block-media-text .wp-block-media-text__media,
+  .wp-block-media-text .wp-block-media-text__content {
+    width: 100%;
+    padding: 0;
+  }
+}
 .wp-block-code {
   background: #0f0e22;
   padding: 1em;
