#31 - Fixing blog archive footer links

--- a/src/content/blog/2023.pug
+++ b/src/content/blog/2023.pug
@@ -191,7 +191,9 @@ h2 Blog
         img(src='/assets/blog/2023/01/1_0twpdr9rjoC3lNUQ1o1Wow.webp' style=' width: 100%; height: auto;' alt='Screenshot of our entry in British Vogue')
 
   .menu(role="navigation")
-      ul(role="menu")
-          li(role="presentation")
-              a(href='/blog.html' role="menuitem") Recent articles
-          li(role="presentation") 2023
+    ul(role="menu")
+        li(role="presentation")
+            a(href='/blog.html' role="menuitem") Recent articles
+        li(role="presentation")
+              a(href='/blog/2024.html' role="menuitem") 2024
+        li(role="presentation") 2023
