--- a/src/content/blog/2024.pug
+++ b/src/content/blog/2024.pug
@@ -89,7 +89,9 @@ h2 Blog
 
 
   .menu(role="navigation")
-      ul(role="menu")
-          li(role="presentation")
-              a(href='/blog.html' role="menuitem") Recent articles
-          li(role="presentation") 2023
+    ul(role="menu")
+        li(role="presentation")
+            a(href='/blog.html' role="menuitem") Recent articles
+        li(role="presentation") 2024
+        li(role="presentation")
+              a(href='/blog/2023.html' role="menuitem") 2023
