#31 - Updating contact us links

--- a/src/content/contact_us.pug
+++ b/src/content/contact_us.pug
@@ -50,7 +50,10 @@ h2 Contact us
       | Find us across the web at the following destinations:
       br
       br
-      h4 Open Studios
+      h4.icon_button
+        img(src='/assets/images/logo-wide.png' alt='Open Studios logo')
+        div
+          | Open Studios
       strong ArtStation: 
       a(href='https://www.artstation.com/openstudios') openstudios
       br
@@ -63,27 +66,8 @@ h2 Contact us
       strong LinkedIn: 
       a(href='https://www.linkedin.com/company/open-studios-australia/') Open Studios
       br
-      strong Medium: 
-      a(href='https://medium.com/@open_studios') @open_studios
-      br
       strong YouTube: 
       a(href='https://www.youtube.com/@open-studios') @open-studios
-      br
-      br
-      h4.icon_button
-        img(src='/assets/images/garrettray.png' alt='Garrett Ray Jewellery logo')
-        div Garrett Ray Jewellery
-      strong Facebook: 
-      a(href='https://www.facebook.com/GarrettRayJewellery/') GarrettRayJewellery
-      br
-      strong Instagram: 
-      a(href='https://www.instagram.com/garrettrayjewellery/') @garrettrayjewellery
-      br
-      strong LinkedIn: 
-      a(href='https://www.linkedin.com/company/garrett-ray-jewellery/') Garrett Ray Jewellery
-      br
-      strong Website: 
-      a(href='https://grayjewellery.com.au') https://grayjewellery.com.au
       br
       br
       h4.icon_button
