--- a/src/content/contact_us.pug
+++ b/src/content/contact_us.pug
@@ -54,6 +54,7 @@ h2 Contact us
         img(src='/assets/images/logo-wide.png' alt='Open Studios logo')
         div
           | Open Studios
+      p Our official socials.
       strong ArtStation: 
       a(href='https://www.artstation.com/openstudios') openstudios
       br
@@ -71,9 +72,22 @@ h2 Contact us
       br
       br
       h4.icon_button
+        img(src='/assets/blog/2025/05/3d-logo-01-1024x576.png' alt='Langenium logo')
+        div
+          | Langenium
+      p Free online game.
+      strong Github: 
+      a(href='https://github.com/OpenStudiosCo/Langenium') Langenium repository
+      br
+      strong Website: 
+      a(href='https://langenium.com') https://langenium.com
+      br
+      br
+      h4.icon_button
         img(src='/assets/images/kamigen.png' alt='Kamigen logo')
         div
           | Kamigen
+      p Free Solarpunk comics.
       strong Facebook: 
       a(href='https://www.facebook.com/kamigenofficial/') Kamigen
       br
@@ -88,6 +102,7 @@ h2 Contact us
         img(src='/assets/images/paulbrzeski.png' alt='Paul Brzeski Consulting logo')
         div
           | Paul Brzeski
+      p Creative Technologist.
       strong Github: 
       a(href='https://www.github.com/paulbrzeski/') paulbrzeski
       br
