#31 - Updating about us bios

--- a/src/templates/footer.pug
+++ b/src/templates/footer.pug
@@ -8,6 +8,8 @@
                         li(role="presentation")
                             a(href='/about_us.html' role="menuitem") Meet the team
                         li(role="presentation")
+                            a(href='/about_us.html' role="menuitem") Tools of the trade
+                        li(role="presentation")
                             a(href='/about_us.html' role="menuitem") Our values
                         li(role="presentation")
                             a(href='/blog.html' role="menuitem") Blog
