--- a/src/content/about_us.pug
+++ b/src/content/about_us.pug
@@ -17,9 +17,9 @@ h2 About Us
           a.icon_button(href='https://linkedin.com/in/paul-b-23620b209/' title='Paul Brzeski on LinkedIn')
             img(src='/assets/images/linkedin.png')
         p
-          | Introducing Paul, a versatile and forward-thinking problem solver with over 15 years in the industry. Beyond the traditional boundaries of coding, Paul has embraced a multifaceted style that seamlessly blends technology and creativity to craft innovative solutions.
+          | Introducing Paul, a creative technologist with two decades in the industry. Starting in software development, Paul has branched out as a creative in his role at the studio.
         p
-          | With a natural ability to envision the intersection of art and technology, Paul&apos;s journey has been characterized by staying at the forefront of the ever-changing tech landscape and pushing the boundaries of what&apos;s possible. He seamlessly adapts to different environments, bringing a perfect blend of technical expertise and creative flair to each project.
+          | With a proficiency for producing art and technology, Paul&apos;s journey has been characterized by staying at the forefront of the ever-changing tech landscape and pushing the boundaries of what&apos;s possible.
       .profile
         img.profile_image(src='/assets/images/about-us/garrett.png' style=' width: 100%; height: auto;' alt='Photo of Garrett studying a whisky blend at a distillery in Scotland')
         h3
@@ -29,7 +29,7 @@ h2 About Us
         p
           | Meet Garrett, the embodiment of sophistication and innovation, renowned as an award-winning bartender, expert jeweler, and connoisseur of rare whiskies.
         p
-          | Embracing the digital realm, Garrett shares his passion and expertise as a taste visionary, enriching the online world with his profound knowledge of aesthetics and all things refined.
+          | From bar manager to digital artist, Garrett is skilled at creating visually compelling stories using 2D and 3D assets. Enriching our online world with his profound knowledge of aesthetics and all things refined.
   .row.center
     .wide-column
       h3 Our process
